--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: gcfree1.galaxy-cloud.icu, port: 443, type: vmess, uuid: 99498865-751d-4889-8349-51301fa3d930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree1.galaxy-cloud.icu}}
-  - {name: 🇰🇷 韩国-6.70MB/s(Youtube:不良林), server: 146.56.45.173, port: 21365, type: vmess, uuid: 49526417-e201-4949-8055-81b0fb264be5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-386.7KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 3.145.72.116, port: 127, type: vmess, uuid: eea1bbc2-9ab3-4db3-9ae6-a3df5b8765b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 3.145.72.116}}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: a07.atfk.site, port: 52415, type: vmess, uuid: c1ace1d4-6f57-3884-b300-fde0c707949c, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.35MB/s(Youtube:不良林), server: 43.128.253.82, port: 31372, type: vmess, uuid: 2a9056a7-bf92-40c8-f155-1e14aac9beba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.19MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-760.4KB/s(Youtube:不良林), server: 36.139.112.39, port: 20785, type: vmess, uuid: 1b693eb3-3241-362a-9001-5b503789cfbe, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /admin, ws-headers: {Host: 36.139.112.39}}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-433.2KB/s(Youtube:不良林), server: gy02.20220512.cyou, port: 37762, type: trojan, password: 207eed47-ffdd-4bd4-91c1-719ac25c9cee, sni: gy02.20220512.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-760.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-433.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
