--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-839.8KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.95MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-5.94MB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.44MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-504.2KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.08MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇯🇵 日本-6.74MB/s(Youtube:不良林), server: mixv4-27.194610.xyz, port: 443, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-27.194610.xyz}}
-  - {name: 🇺🇸 美国-4.63MB/s(Youtube:不良林), server: gcfree1.galaxy-cloud.icu, port: 443, type: vmess, uuid: 856fd239-43aa-499e-b56b-8af235c32fb5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree1.galaxy-cloud.icu}}
-  - {name: 🇺🇸 美国-4.02MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-311.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-5.94MB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-839.8KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.62MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-17.77MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
+  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.45MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-504.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇮🇳 印度-839.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
